2007-01-27  Eli Zaretskii  <eliz@gnu.org>

	* ls-lisp.el (ls-lisp-use-localized-time-format): New defcustom.
	(ls-lisp-format-time-list): Doc fix.  Mention
	ls-lisp-use-localized-time-format.
	(ls-lisp-format-time): Use ls-lisp-format-time-list if
	ls-lisp-use-localized-time-format is non-nil, even if a valid
	locale is defined.

2007-01-27  Juanma Barranquero  <lekktu@gmail.com>

	* jka-compr.el (jka-compr-shell): Doc fix.

	* jka-cmpr-hook.el (jka-compr-compression-info-list): Doc fix.

2007-01-26  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* ps-print.ps: Fix background height.
	(ps-print-version): New version 6.7.2.

2007-01-26  Eli Zaretskii  <eliz@gnu.org>

	* makefile.w32-in (finder-data, custom-deps): Depend on
	$(lisp)/loaddefs.el.

2007-01-24  Dan Nicolaescu  <dann@ics.uci.edu>

	* Makefile.in (custom-deps, finder-data): Add dependency to loaddefs.el.

2007-01-24  Miles Bader  <miles@gnu.org>

	* emacs-lisp/bytecomp.el (byte-compile-output-file-form)
	(byte-compile-output-docform): Bind `print-circle' to t.

2007-01-24  Kenichi Handa  <handa@m17n.org>

	* international/ja-dic-cnv.el (skkdic-convert): Insert a related
	file name of the original SKK dictionary file.

2007-01-24  Kim F. Storm  <storm@cua.dk>

	* ido.el (ido-initial-position): New variable.
	(ido-read-internal): Set it if default item is specified.
	(ido-minibuffer-setup): Position cursor accordingly if set.
	(ido-edit-input): C-e moves to end of input if not already there.
	(ido-magic-backward-char): C-b does like M-b if prev char is /.
	Don't switch to buffer mode if repeating C-b at start of input.
	(ido-toggle-ignore): C-a only toggles ignore at start or end of
	input; else it moves to start of input.
	(ido-kill-buffer-at-head, ido-delete-file-at-head): If cursor is
	not at end of input, delete rest of input, rather than normal op.

2007-01-23  Michael Kifer  <kifer@cs.stonybrook.edu>

	* viper-keym.el (viper-insert-basic-map): Delete binding for S-TAB.
